# CARL

./: .gitignore  README.md
carl/: CMakeLists.txt  README.md  cardinalities_mining.py  cardinality_patterns.cpp  patterns_using_cardinalities.cpp  patterns_using_cardinalities_lubm.py  patterns_using_cardinalities_people.py  triplestore.cpp  triplestore.h
eval/lubm/: README.md  generate_cardinalities.py  pom.xml  reverse.py
eval/lubm/src/main/java/de/mpg/mpiinf/uba/: OWL2NT.java
eval/lubm/src/main/java/edu/lehigh/swat/bench/uba/: Generator.java
eval/wikidata/: README.md  build_wikidata_people.py  build_wikidata_people_complete.py
eval/wikidata/results/: cardinality_learning_wikidata_people_20170306_with_schema.tsv  cardinality_learning_wikidata_people_20170306_without_schema.tsv  rule_learning_wikidata_people_20170306.tsv  rule_learning_wikidata_people_20170306_rules_global_ratio_0.5.tsv
